# weebtools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
weebtools/: __main__.py  utils.py
weebtools/images/: imageDownloader.py  pixiv.py  yande.py
