[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weebtools"
version = "0.3.0"
authors = [
    { name="Shirogane", email="shirogane23800@gmail.com" },
]
description = "Tools for weebs"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
keywords=[
    'yande',
    'yande.re',
    'pixiv',
    'pixiv.net',
]
classifiers = [
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
]

dependencies = [
    'beautifulsoup4 >= 4.11.1',
    'crc32c',
    'cryptography >= 37.0.4',
    'requests >= 2.27.1',
    'selenium >= 4.3.0',

    # conditionals
    'pywin32 >= 304; sys_platform == "win32"',
]

[project.urls]
Homepage = 'https://github.com/Shirogane23800/weebtools'
